# strawberry_background

./: .gitignore  Cargo.toml  frb_generate.bat  storage_test.txt
dart/: pubspec.yaml
dart/.dart_tool/: package_config.json  package_config_subset  package_graph.json
dart/.dart_tool/extension_discovery/: vs_code.json
dart/lib/ffi/: frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart
src/: frb_generated.rs  lib.rs
src/adapters/ffi/: errors.rs  mod.rs  service_exporter_ffi_adapter.rs  service_ffi_adapter.rs
src/domain/: mod.rs  models.rs  traits.rs
src/domain/models/: audio_models.rs  cookie_models.rs  coordinator_models.rs  error_convert.rs  file_cache_models.rs  http_models.rs  mod.rs  monitor_models.rs  storage_models.rs
src/domain/traits/: audio_traits.rs  cookie_traits.rs  coordinator_traits.rs  download_coordinator_traits.rs  file_cache_traits.rs  http_traits.rs  mod.rs  monitor_traits.rs  storage_traits.rs
src/infrastructure/: mod.rs
src/infrastructure/file_cache/: file_cache_backend.rs  mod.rs
src/infrastructure/http/: cookie_backend.rs  mod.rs  (+1 more)
src/monitor/: monitor_service.rs
src/rkv/: mod.rs  rkv_impl.rs
src/rkyv/: mod.rs
src/service/: config.rs  mod.rs  service_exporter.rs  service_runtime.rs
src/service_runtime/: config.rs  service_exporter.rs  service_runtime.rs
src/superstructure/: file_cache_backend.rs  mod.rs
src/utils/: blocking_heap.rs  keyed_rw_lock.rs  mod.rs  progress_reader.rs  stream_with_callback.rs  url_component.rs  waiter.rs
strawberry_macros/: Cargo.toml
strawberry_macros/src/: lib.rs
(+16 files in other folders)
