[package]
name = "strawberry_background"
version = "0.1.0"
edition = "2024"

[lib]
name = "strawberry_background"
path = "src/lib.rs"

[dependencies]
reqwest = { version = "0.13.1", features = ["json", "blocking"] }
tokio = { version = "1.49.0", features = ["full"] }
thiserror = "2.0.18"
async-trait = "0.1.89"
percent-encoding = "2.3.2"
reqwest_cookie_store = "0.10.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
url = "2.5.8"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }